# django-para-profissionais

./: README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: django_ci.yml
config/: .env-sample
devpro/: asgi.py  settings.py  urls.py  wsgi.py
devpro/base/: tests.py  urls.py  views.py
