[tool.poetry]
name = "django-para-profissionais"
version = "0.1.0"
description = "Projeto com código fonte do curso Django para Profisisonais da DevPro"
authors = ["renzon <renzo.n@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-django = "^4.9.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "devpro.settings"
python_files = ["test*.py", "*.p_testy"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
